   about commenting/uncommenting section headers when you change an option.
 * #721: BREAKING: The retention prefix and the consistency prefix can no longer have different
   values (unless one is not set).
 * #721: BREAKING: The storage umask and the hooks umask can no longer have different values (unless
   one is not set).
 * BREAKING: Remove the deprecated (and silently ignored) "--successful" flag on the "list" action,
   as newer versions of Borg list successful (non-checkpoint) archives by default.
 * All deprecated configuration option values now generate warning logs.
 * Remove the deprecated (and non-functional) "--excludes" flag in favor of excludes within
   configuration.
 * Fix an error when logging too-long command output during error handling. Now, long command output
   is truncated before logging.

1.7.15
 * #326: Add configuration options and command-line flags for backing up a database from one
   location while restoring it somewhere else.
 * #399: Add a documentation troubleshooting note for MySQL/MariaDB authentication errors.
 * #529: Remove upgrade-borgmatic-config command for upgrading borgmatic 1.1.0 INI-style
   configuration.
 * #529: Deprecate generate-borgmatic-config in favor of new "config generate" action.
 * #529: Deprecate validate-borgmatic-config in favor of new "config validate" action.
 * #697, #712, #716: Extract borgmatic configuration from backup via new "config bootstrap"
   action—even when borgmatic has no configuration yet!
 * #669: Add sample systemd user service for running borgmatic as a non-root user.
 * #711, #713: Fix an error when "data" check time files are accessed without getting upgraded
   first.

1.7.14
 * #484: Add a new verbosity level (-2) to disable output entirely (for console, syslog, log file,
   or monitoring), so not even errors are shown.
 * #688: Tweak archive check probing logic to use the newest timestamp found when multiple exist.